# blext

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE_header.txt  README.md  mkdocs.yml  pyproject.toml
blext/: __init__.py  __main__.py  blender.py  blext_spec.py  cli.py  config.py  exceptions.py  extyp.py  finders.py  loaders.py  location.py  pack.py  paths.py  spec.py  supported.py  wheels.py
blext/blender_python/: bl_init.py
blext/cli/: __init__.py  __main__.py  _context.py  _context_show.py  _context_show_path.py  _entrypoint.py  _parse.py  blender.py  build.py  check.py  dev.py  inject.py  run.py  show_blender_manifest.py  show_config.py  show_deps.py  show_global_config.py  show_init_settings.py  show_manifest.py  show_path_blender.py  show_path_global_config.py  show_path_uv.py  show_profile.py  show_spec.py  uv.py
blext/extyp/: __init__.py  bl_manifest.py  bl_manifest_version.py  bl_platform.py  bl_platform_set.py  bl_platforms.py  bl_release.py  bl_release_detected.py  bl_release_discovered.py  bl_release_official.py  bl_version.py  bl_version_source.py  bl_version_source_git.py  bl_version_source_official.py  bl_version_source_smooshed.py  blext_location.py  blext_location_git.py  blext_location_http.py  blext_location_path.py  log_level.py  release_profile.py  spdx_license.py  validators.py
blext/pydeps/: __init__.py  blext_deps.py  download.py  network.py  pydep.py  pydep_download.py  pydep_marker.py  pydep_wheel.py  uv.py  wheel.py  wheels_graph.py
blext/ui/: __init__.py  blext_info.py  download_wheels.py  global_config.py  prepack_extension.py
blext/uityp/: __init__.py  blext_info.py  detectors.py  global_config.py
blext/utils/: __init__.py  bl_init.py  inline_script_metadata.py  lru_method.py  pretty_exceptions.py  pydantic_frozen_dict.py  pydantic_frozendict.py  search_in_parents.py
blext/utils_blender/: __init__.py  bl_init.py
doc/: .gitignore  _quarto.yml  _renderer.py  index.qmd  objects.json  renderer.py
doc/guide/: index.qmd
doc/pydocs/: _sidebar.yml
doc/reference/: index.qmd
docs/: features.md  installation.md
docs/reference/policies/: contributing.md  licensing.md  versioning.md
docs/reference/python_api/: blext.md  blext_cli.md  blext_extyp.md  blext_pydeps.md  blext_ui.md  blext_uityp.md  blext_utils.md  blext_utils_blender.md
docs/resources/: extension_resources.md  git_resources.md  official_extension_guidelines.md
docs/user_guides/: contributing.md  getting_started.md  project_extensions.md  script_extensions.md
docs/user_guides/cli/: commands.md  conforming.md  global_config.md  locating.md  options.md
docs/user_guides/config/: extension_config.md  global_config.md
docs/user_guides/extension_projects/: analyzing.md  creating.md
docs/user_guides/integrations/: ci_cd.md  linting.md  podman_docker.md  pre_commit.md  static_typing.md  testing.md
docs/user_guides/migrating/: from_existing_extension.md  from_legacy_addon.md
examples/: extension_file.py  minimal_file_ext.py  minimal_script.py  simple_script.py
examples/simple/: .gitignore  README.md  pyproject.toml
examples/simple/blext_simple_example/: __init__.py  preferences.py  registration.py
examples/simple/blext_simple_example/contracts/: __init__.py  addon.py  bl.py  bl_handlers.py  bl_keymap.py  icons.py  operator_types.py  panel_types.py
examples/simple/blext_simple_example/operators/: __init__.py  simple_operator.py
examples/simple/blext_simple_example/panels/: __init__.py  simple_panel.py
examples/simple/blext_simple_example/services/: init_settings.py
examples/simple/blext_simple_example/utils/: logger.py  staticproperty.py
examples/simple_proj/: .gitignore  README.md  pyproject.toml
examples/simple_proj/simple_proj/: __init__.py
examples/simple_proj/simple_proj/contracts/: bl.py  bl_handlers.py  icons.py
examples/simple_proj/simple_proj/panels/: __init__.py  simple_panel.py
examples/simple_proj/simple_proj/services/: init_settings.py
examples/simple_proj/simple_proj/utils/: logger.py  staticproperty.py
tests/: __init__.py  _context.py  _pydantic.py  context.py  test_blender.py  test_blext_spec.py  test_cli.py  test_extyp.py  test_finders.py  test_loaders.py  test_pack.py  test_paths.py  test_spec.py
tests/test_cli/: __init__.py  test_build.py  test_check.py  test_run.py  test_show_blender_manifest.py  test_show_deps.py  test_show_global_config.py  test_show_path_blender.py  test_show_path_global_config.py  test_show_path_uv.py  test_show_profile.py
tests/test_extyp/: __init__.py  test_bl_manifest.py  test_bl_manifest_version.py  test_bl_platform.py  test_bl_platform_set.py  test_bl_release_detected.py  test_bl_release_official.py  test_bl_version.py  test_blext_location_git.py  test_blext_location_http.py  test_blext_location_path.py  test_log_level.py  test_release_profile.py  test_spdx_license.py  test_validators.py
tests/test_pydeps/: __init__.py  test_blext_deps.py  test_pydep.py  test_pydep_download.py  test_pydep_marker.py  test_pydep_wheel.py  test_uv.py
tests/test_uityp/: __init__.py  test_blext_info.py  test_detectors.py  test_global_config.py
tests/test_utils/: __init__.py  test_inline_script_metadata.py  test_lru_method.py  test_pydantic_frozendict.py  test_search_in_parents.py
